resolve overflow y scroll bar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@ body {
 .base-container {
   max-width: 1620px;
   margin: 0 auto;
+  overflow-y: hidden;
 }
 
 .flex {
